# mqtt_sht10

./: CMakeLists.txt  README.md  cmake_install.cmake
settings/: get_humi  get_temp  mqtt_config.cfg  setting.c
src/: main.c
