CMAKE_MINIMUM_REQUIRED ( VERSION 2.8 )

PROJECT(MQTT-SHT10)
SET ( PROJECT_VERSION_MAJOR 1 )
SET ( PROJECT_VERSION_MINOR 1 )

set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -std=gnu99")

file(GLOB_RECURSE SRC_FILES
       src/*.c
#       include/*.h
)

SET( OUTPUT_ELF
        "${CMAKE_PROJECT_NAME}-${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}.out"
)

INCLUDE_DIRECTORIES( include )
LINK_LIBRARIES( cjson pthread config)

ADD_EXECUTABLE( ${OUTPUT_ELF} ${SRC_FILES} )
